# vkguide

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  compile_commands.json
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  textured_lit.frag  tri_mesh_ssbo.vert  triangle.vert
src/: CMakeLists.txt  asset_loader.cpp  cvars.cpp  material_asset.cpp  material_system.cpp  mesh_asset.cpp  prefab_asset.cpp  texture_asset.cpp  vk_descriptor.cpp  vk_descriptor.h  vk_engine.cpp  vk_engine.h  vk_engine_scenerender.cpp  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_profiler.h  vk_pushbuffer.cpp  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h  vk_types.h
